syntax = "proto3";

package micro.apps.proto.echo.v1;

option java_multiple_files = true;
option java_outer_classname = "EchoServiceProto";
option java_package = "micro.apps.proto.echo.v1";

service EchoService {
    rpc Echo(EchoRequest) returns (EchoResponse);
    rpc EchoStream(EchoStreamRequest) returns (stream EchoStreamResponse) {}
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

message EchoStreamRequest {
    string message = 1;
}

message EchoStreamResponse {
    string message = 1;
}
